--- a/skynet/Makefile
+++ b/skynet/Makefile
@@ -31,10 +31,7 @@ MALLOC_STATICLIB := $(JEMALLOC_STATICLIB)
 $(JEMALLOC_STATICLIB) : 3rd/jemalloc/Makefile
 	cd 3rd/jemalloc && $(MAKE) CC=$(CC) 
 
-3rd/jemalloc/autogen.sh :
-	git submodule update --init
-
-3rd/jemalloc/Makefile : | 3rd/jemalloc/autogen.sh
+3rd/jemalloc/Makefile :
 	cd 3rd/jemalloc && ./autogen.sh --with-jemalloc-prefix=je_ --disable-valgrind
 
 jemalloc : $(MALLOC_STATICLIB)
